crates/credential/tests/probes/dyn_credential_const_key.stderr
error[E0191]: the value of the associated types `Input`, `Scheme` and `State` in `Credential` must be specified
  --> tests/probes/dyn_credential_const_key.rs:22:24
   |
22 | fn _take_bare(_c: &dyn Credential) {}
   |                        ^^^^^^^^^^
   |
help: specify the associated types
   |
22 | fn _take_bare(_c: &dyn Credential<Input = /* Type */, Scheme = /* Type */, State = /* Type */>) {}
   |                                  +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0038]: the trait `Credential` is not dyn compatible
  --> tests/probes/dyn_credential_const_key.rs:25:10
   |
25 |     _c: &dyn Credential<Input = I, Scheme = S, State = St>,
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Credential` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> src/contract/credential.rs
   |
   |     const KEY: &'static str;
   |           ^^^ the trait is not dyn compatible because it contains associated const `KEY`
   = help: the following types implement `Credential`:
             nebula_credential::ApiKeyCredential
             nebula_credential::BasicAuthCredential
             nebula_credential::OAuth2Credential
           consider defining an enum where each variant holds one of these types,
           implementing `Credential` for this new enum and using it instead
